# explodifydev

./: .env.example  .gitignore  LICENSE  README.md  explodify.py  nohup.out  pyproject.toml  regen_demo_video.py  requirements.txt  run_phase4_5frames.py  run_phase4_direct.py  test_orientation.py
backend/: auth.py  gallery.py  jobs.py  main.py  media_utils.py  models.py  profiles.py
docs/adr/: 001-auth-jwks.md
docs/superpowers/plans/: 2026-04-11-collaborator-phase1-2.md  2026-04-11-interface-contract.md  2026-04-11-kirill-phase3-4-webapp.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  test-setup.ts
frontend/src/api/: authFetch.ts  client.ts  errors.ts  useAuthedBlobUrl.ts
frontend/src/components/: AuthedImg.tsx  BackdropPicker.tsx  ConfirmCreditsModal.tsx  CustomVideoPlayer.tsx  EasingEditor.tsx  FramesOutput.tsx  Gallery.tsx  IdleOutput.tsx  JobQueueIndicator.tsx  LoadingOutput.tsx  LoopModeSelector.tsx  MeshViewer.tsx  ModelSelectionPopover.tsx  ModelSelector.tsx  OrientationPicker.tsx  PipelineProgress.tsx  PreviewFrame.tsx  PricingModal.tsx  ProceedToStyleButton.tsx  Profile.tsx  PromptInput.tsx  ReplaceGalleryModal.tsx  SaveToGalleryButton.tsx  StylePanel.tsx  TopNav.tsx  UploadZone.tsx  (+3 more)
pipeline/: format_loader.py  models.py  orientation_preview.py  phase1_geometry.py  phase2_snapshots.py  phase3_assemble.py  phase4_video.py  prompt_interpreter.py
scripts/: rerender_demo.py
tests/backend/: conftest.py  test_api.py  test_auth.py
tests/pipeline/: test_phase4_video.py
(+33 files in other folders)
